feature#12: PR returns

--- a/angular-front/src/app/register/components/register/register.component.html
+++ b/angular-front/src/app/register/components/register/register.component.html
@@ -186,7 +186,8 @@
                 <label class="form-check-label" for="music-general" i18n>General</label>
               </div>
               <div class="form-check form-check-inline">
-                <input class="form-check-input" type="checkbox" id="music-dance-electro" formControlName="musicDanceElectro">
+                <input class="form-check-input" type="checkbox" id="music-dance-electro"
+                  formControlName="musicDanceElectro">
                 <label class="form-check-label" for="music-dance-electro" i18n>Dance/Electro</label>
               </div>
               <div class="form-check form-check-inline">
