--- a/angular-front/src/app/home/components/hero/hero.component.html
+++ b/angular-front/src/app/home/components/hero/hero.component.html
@@ -1,55 +1,11 @@
 <section class="couple-section">
   <div class="container-fluid">
     <div class="d-flex justify-content-center">
-      <!-- <div class="warp" aria-labelledby="warp-label">
-        <span id="warp-label" class="warp__placeholder">
-          It's a match
-        </span>
-
-        <span aria-role="presentation">
-          <span class="warp__0">
-            I
-          </span>
-          <span class="warp__1">
-            t
-          </span>
-          <span class="warp__2">
-            '
-          </span>
-          <span class="warp__3">
-            s
-          </span>
-          <span class="warp__4">
-
-          </span>
-          <span class="warp__5">
-            a
-          </span>
-          <span class="warp__6">
-
-          </span>
-          <span class="warp__7">
-            m
-          </span>
-          <span class="warp__8">
-            a
-          </span>
-          <span class="warp__9">
-            t
-          </span>
-          <span class="warp__10">
-            c
-          </span>
-          <span class="warp__11">
-            h
-          </span>
-        </span>
-      </div> -->
+      <h1>It's a match</h1>
     </div>
     <div class="container">
       <div class="row justify-content-center">
-        <div
-          class="card husband col-sm-5 col-md-5 col-lg-4 col-xl-3 d-flex flex-column justify-content-center align-items-center">
+        <div class="card husband col-sm-5 col-md-5 col-lg-4 col-xl-3 d-flex flex-column justify-content-center align-items-center">
           <img src="/assets/images/clement_profil.jpg" alt="clement">
           <div class="card-info mt-2">
             <div class="d-flex align-items-center justify-content-start">
@@ -65,8 +21,7 @@
         <div class="middle col-1 d-flex flex-column justify-content-end align-items-center">
           <img class="matcher" src="/assets/images/percentmatcher.svg" alt="certified" />
         </div>
-        <div
-          class="card wife col-sm-5 col-md-5 col-lg-4 col-xl-3 d-flex flex-column justify-content-center align-items-center">
+        <div class="card wife col-sm-5 col-md-5 col-lg-4 col-xl-3 d-flex flex-column justify-content-center align-items-center">
           <img src="/assets/images/huyen_profil.jpg" alt="clement">
           <div class="card-info mt-2">
             <div class="d-flex align-items-center justify-content-start">
@@ -89,5 +44,4 @@
          Merci de faire partie de notre vie et de partager ce moment important avec nous.</p>
     </div>
   </div>
-
 </section>
