feature#45: footer changes

--- a/angular-front/src/app/shared/footer/footer.component.html
+++ b/angular-front/src/app/shared/footer/footer.component.html
@@ -1,10 +1,8 @@
 <footer class="footer-container">
   <div class="container">
     <div class="footer-main d-flex flex-wrap justify-content-center pt-5">
-      <div class="col-md-5 col-sm-5 col-12 d-flex justify-content-center align-items-start mb-4">
-        <button class="light-button gold" data-style="no-move" routerLink="/register" routerLinkActive="active-link" i18n>
-          INSCRIPTION
-        </button>
+      <div class="mini-logo col-md-5 col-sm-5 col-12 d-flex justify-content-center align-items-center mb-4">
+        <img src="/assets/images/arrow.png" alt="Logo" />
       </div>
       <div class="contact col-md-4 col-sm-4 col-12 d-flex flex-column justify-content-center align-items-start">
         <h4 class="contact-header" i18n>Get in touch</h4>
@@ -32,8 +30,8 @@
           </ul>
         </div>
       </div>
-      <div class="mini-logo col-md-3 col-sm-3 col-12 d-flex flex-column justify-content-center align-items-center">
-        <img src="/assets/images/arrow.png" alt="Logo" />
+      <div class="col-md-3 col-sm-3 col-12 d-flex flex-column justify-content-center align-items-center mt-4">
+        <h5>Made by Clement & Huyen 2023</h5>
         <h5>&copy; CDX</h5>
       </div>
     </div>
