--- a/angular-front/src/app/home/components/countdown-custom/countdown-custom.component.html
+++ b/angular-front/src/app/home/components/countdown-custom/countdown-custom.component.html
@@ -1,12 +1,45 @@
 <div class="flip-clock-element">
   <div class="flip-element">
     <div class="palette">
-      <b class="palette-top text-center" [@flipTop]="unit">{{unit}}</b>
-      <b class="palette-bottom text-center" [attr.data]="lastUnit"></b>
-      <b class="palette-back text-center" [attr.data]="lastUnit">
-        <b class="palette-bottom text-center" [@flipBottom]="unit" [attr.data]="unit">
+      <b class="palette-top text-center" [@flipTop]="value">{{value}}</b>
+      <b class="palette-bottom text-center" [attr.data]="lastValue"></b>
+      <b class="palette-back text-center" [attr.data]="lastValue">
+        <b class="palette-bottom text-center" [@flipBottom]="value" [attr.data]="value">
         </b>
       </b>
     </div>
   </div>
+
+  <!-- <div class="content">
+    <div style="position:absolute">
+      <div class="flip">
+        <div class="up">
+          <div>{{transformTime(currentValue)}}</div>
+        </div>
+        <div class="down">
+          <div>
+            <div>{{transformTime(lastValue)}}</div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div style="position:absolute">
+      <div class="flip-card">
+        <div class="flip-card-inner" [@flip]="value" >
+          <div class="flip-card-front">
+            <div class="up">
+              <div>{{transformTime(lastValue)}}</div>
+            </div>
+          </div>
+          <div class="flip-card-back">
+            <div class="down">
+              <div>
+                <div>{{transformTime(currentValue)}}</div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div> -->
 </div>
