--- a/angular-front/src/styles/variables.scss
+++ b/angular-front/src/styles/variables.scss
@@ -19,6 +19,7 @@ $prmary-positive-color:#8FD9A9;
 $dark-color: #231D21;
 $grey-color: #f4f4f4;
 $white-color: #ffffff;
+$mat-white-color: #D6ECEA;
 $blue-color: #122274;
 $red-color: #CF081F;
 
@@ -27,7 +28,7 @@ $sizeBorder: 2px;
 
 /* COUNTDOWN */
 $halfPaletteHeight: 4vw;
-$paletteWidth: 10vw;
+$paletteWidth: 9vw;
 
 // SIZES
 $footer-link-text-size: 2rem;
